# rusty-cardboard

./: .gitignore  .gitmodules  AndroidManifest.xml  Cargo.toml  Makefile  README.md  build.rs  configure
.cargo/: config
jni/: Android.mk  Application.mk  android_log_glue.c  app.rs  asset_manager.rs  egl.rs  engine.rs  gl.rs  input.rs  jni.rs  log.rs  main.c  main.rs  native_window.rs  sensor.rs
res/values/: strings.xml
src/: app.rs  asset_manager.rs  egl.rs  egl_context.rs  engine.rs  fov.rs  fps.rs  fragment_shader.gles.glsl  fragment_shader.mesa.glsl  gl.rs  input.rs  jni.rs  log.rs  main.rs  mesh.rs  native_window.rs  perlin.rs  program.rs  sensor.rs  vertex_shader.gles.glsl  vertex_shader.mesa.glsl  vertices.rs  world.rs  x11.rs
src/support/: mod.rs
src/x11/: key.rs  mod.rs
