[package]
name = "RustyCardboard"
version = "0.1.0"
authors = ["Skirmantas Kligys <Skirmantas.Kligys@gmail.com>"]
description = "Minecraft simulation in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/skligys/rusty-cardboard"

[target.arm-linux-androideabi.dependencies.android_glue]
git = "https://github.com/skligys/android-rs-glue"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.png]
git = "https://github.com/servo/rust-png.git"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs.git"

[dependencies]
lazy_static = "0.1.*"
libc = "*"
time = "*"
