[package]
name = "rusty_cardboard"
version = "0.1.0"
authors = ["Skirmantas Kligys <Skirmantas.Kligys@gmail.com>"]
description = "Minecraft simulation in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/skligys/rusty-cardboard"

[target.arm-linux-androideabi.dependencies.android_glue]
git = "https://github.com/skligys/android-rs-glue"

# As of 2016-03-19, crates.io version points to cgmath-0.5 and conflicts with
# current cgmath-0.7 on crates.io.
[dependencies.collision]
git = "https://github.com/csherratt/collision-rs.git"

[dependencies.png]
git = "https://github.com/servo/rust-png.git"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs.git"

[dependencies]
cgmath = "*"
lazy_static = "*"
libc = "*"
time = "*"
